--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "10.0.7",
     "node-postgres": "^0.6.2",
     "pg": "^8.5.1",
