--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "multer": "^1.4.2",
     "next": "10.0.7",
     "node-postgres": "^0.6.2",
+    "nprogress": "^0.2.0",
+    "path": "^0.12.7",
     "pg": "^8.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
