--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "multer": "^1.4.2",
+    "multiparty": "^4.2.2",
     "next": "10.0.7",
     "node-postgres": "^0.6.2",
     "nprogress": "^0.2.0",
@@ -24,8 +25,10 @@
     "pg": "^8.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-select": "^4.3.0",
     "sass": "^1.32.8",
-    "slugify": "^1.4.7"
+    "slugify": "^1.4.7",
+    "util": "^0.12.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
